# WebProyect

./: .gitignore  AUTENTICACION_COOKIES.md  IMPLEMENTACION_COMPLETA.md  INTEGRACION_FRONTEND.md  README.md  README_JWT.md  RESUMEN_FINAL.md
backend/: .env.example  Cargo.toml  DIAGRAMA_FLUJO.md  JWT_README.md  SECURITY_BEST_PRACTICES.md  schema.sql  test_jwt.ps1  test_requests.http
backend/src/: lib.rs  main.rs
backend/src/database/: asignaturas.rs  mod.rs  prelude.rs  usuarios.rs
backend/src/routes/: jwt_examples.rs  login.rs
backend/src/utils/: db.rs  jwt.rs
frontend/: balance.css  balance.html  jwt-test.html  login-es.css  login.html  principal-es.css  principal.html
proyecto de web/: balance.css  balance.html  login-es.css  login.html  principal-es.css  principal.html
